--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.544.0",
     "mongodb": "^6.20.0",
     "next": "15.5.2",
+    "paystack-sdk": "^3.0.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.63.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
