--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "paystack-sdk": "^3.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.63.0"
+    "react-hook-form": "^7.63.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
