--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.544.0",
